[package]
name = "tcltksevenguitasks"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "counter"
path = "src/counter.rs"

[[bin]]
name = "temperature"
path = "src/temperature.rs"

[[bin]]
name = "flightbooker"
path = "src/flightbooker.rs"

[[bin]]
name = "timer"
path = "src/timer.rs"

[[bin]]
name = "crud"
path = "src/crud.rs"

[[bin]]
name = "circles"
path = "src/circles.rs"

[dependencies]
fltk = "1.0.19"
chrono = "0.4.19"
